syntax = "proto3";

option go_package = "/protobuf";

import "google/api/annotations.proto";

package user;

service UserService {
  rpc Authenticate(AuthRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/login"
      body: "*"
    };
  };
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/register"
      body: "*"
    };
  };
  rpc GetProfile(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/profile"
    };
  };
  rpc UpdateProfile(UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      put: "/api/v1/users/profile"
      body: "*"
    };
  };
}

message RegisterRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  string password_confirmation = 5;
}

message RegisterResponse {
  int64 user_id = 1;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}

message GetUserRequest {}

message GetUserResponse {
  int64 user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
}

message UpdateUserRequest {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
}

message UpdateUserResponse {}