syntax = "proto3";

option go_package = "/protobuf";

package payments;

service PaymentService {
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
  rpc GetPaymentStatus(GetPaymentStatusRequest) returns (GetPaymentStatusResponse);
}

message ProcessPaymentRequest {
  int64 order_id = 1;
  double amount = 2;
  Currency currency = 3;
  Method payment_method = 4;
}

message ProcessPaymentResponse {
  int64 transaction_id = 1;
  Status status = 2;
}

message GetPaymentStatusRequest {
  int64 transaction_id = 1;
}

message GetPaymentStatusResponse {
  Status status = 1;
}

enum Status {
  PENDING = 0;
  COMPLETED = 1;
  FAILED = 2;
  REFUNDED = 3;
}

enum Method {
  CREDIT_CARD = 0;
  PAYPAL = 2;
}

enum Currency {
  EUR=0;
  USD=1;
  JPY=2;
  BGN=3;
  CZK=4;
  DKK=5;
  GBP=6;
  HUF=7;
  PLN=8;
  RON=9;
  SEK=10;
  CHF=11;
  ISK=12;
  NOK=13;
  HRK=14;
  RUB=15;
  TRY=16;
  AUD=17;
  BRL=18;
  CAD=19;
  CNY=20;
  HKD=21;
  IDR=22;
  ILS=23;
  INR=24;
  KRW=25;
  MXN=26;
  MYR=27;
  NZD=28;
  PHP=29;
  SGD=30;
  THB=31;
  ZAR=32;
}